Migrated tester-tool to a single VM design and added multiple http client functionality